--- a/index.html
+++ b/index.html
@@ -59,12 +59,10 @@
 									And my favourite current quote: <b>"Losing is an illusion. There are only victories and lessons."</b>
 								</em>
 							</header>
-							<!--
 							<a href="#work" class="jumplink pic">
 								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-								<img src="images/me2.jpg" alt="" />
+								<!--<img src="images/me2.jpg" alt="" />-->
 							</a>
-							-->
 						</article>
 
 						<!-- Work -->
